Fix the dependency error in description (consistent with namespace) and remove the \keyword{classes} in rd files of defining two classes.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sobolindices@3 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/SobolIndices/DESCRIPTION
+++ b/pkg/SobolIndices/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Min Wang <wang.1807@mbi.osu.edu>
 Description: The SobolIndices package implements the methods for
   determining the numerator of the sobol indices.
 Depends: R (>= 3.1), cubature
-Imports: rstiefel, MASS, mvtnorm
+Imports: MASS, mvtnorm, methods, stats, graphics, cubature
 License: Apache License (== 2.0)
 biocViews: Variable Selection
 URL: https://r-forge.r-project.org/
