Fix the loading rstiefel package bug and change description and namespace correspondingly.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sobolindices@18 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/SobolIndices/NAMESPACE
+++ b/pkg/SobolIndices/NAMESPACE
@@ -6,7 +6,8 @@ import(stats)
 import(graphics)
 import(MASS)
 import(mvtnorm)
-importFrom(cubature, adaptIntegrate)
+import(rstiefel)
+import(cubature)
 
 # compute Sobol Indices using integrals under logit link
 export(LogitSImainsingle, LogitSImain, LogitSIsecpair, LogitSIsec)
