Fix bug (load rstiefel package issue) in test file, remove duplicated summary in Rd files, and remove duplicated depends or imports (cubature) in description file.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sobolindices@19 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/SobolIndices/DESCRIPTION
+++ b/pkg/SobolIndices/DESCRIPTION
@@ -6,8 +6,8 @@ Author: Min Wang, Rong Lu and Grzegorz Rempala
 Maintainer: Min Wang <wang.1807@mbi.osu.edu>
 Description: The SobolIndices package implements the methods for
   determining the numerator of the sobol indices.
-Depends: R (>= 3.1), cubature
-Imports: MASS, mvtnorm, methods, stats, graphics, cubature, rstiefel
+Depends: R (>= 3.1)
+Imports: MASS, mvtnorm, methods, stats, graphics, rstiefel, cubature
 License: Apache License (== 2.0)
 biocViews: Variable Selection
 URL: https://r-forge.r-project.org/
