--- a/pkg/SobolSensitivity/DESCRIPTION
+++ b/pkg/SobolSensitivity/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: SobolIndices
+Package: SobolSensitivity
 Version: 1.0.0
 Date: 2016-04-19
-Title: Computing the Sobol Indices
+Title: Computing the Sobol Sensitivity Indices
 Author: Min Wang, Rong Lu and Grzegorz Rempala
 Maintainer: Min Wang <wang.1807@mbi.osu.edu>
 Description: The SobolIndices package implements the methods for
