--- a/pkg/SobolSensitivity/DESCRIPTION
+++ b/pkg/SobolSensitivity/DESCRIPTION
@@ -4,8 +4,8 @@ Date: 2016-04-19
 Title: Computing the Sobol Sensitivity Indices
 Author: Min Wang, Rong Lu and Grzegorz Rempala
 Maintainer: Min Wang <wang.1807@mbi.osu.edu>
-Description: The SobolIndices package implements the methods for
-  determining the numerator of the sobol indices.
+Description: The SobolSensitivity package implements the methods for
+  determining the numerator of the sobol sensitivity indices.
 Depends: R (>= 3.1)
 Imports: MASS, mvtnorm, methods, stats, graphics, rstiefel, cubature
 License: Apache License (== 2.0)
