--- a/pkg/SobolSensitivity/DESCRIPTION
+++ b/pkg/SobolSensitivity/DESCRIPTION
@@ -6,8 +6,8 @@ Author: Min Wang, Rong Lu and Grzegorz Rempala
 Maintainer: Min Wang <wang.1807@mbi.osu.edu>
 Description: The SobolSensitivity package implements the methods for
   determining the numerator of the sobol sensitivity indices.
-Depends: R (>= 3.1)
-Imports: MASS, mvtnorm, methods, stats, graphics, rstiefel, cubature
+Depends: R (>= 3.1), cubature
+Imports: MASS, methods, stats, graphics
 License: Apache License (== 2.0)
 biocViews: Variable Selection
 URL: https://r-forge.r-project.org/
