Fix R code bug (shouldn't remove mvtnorm package) and namespace missing package.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sobolindices@29 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/SobolSensitivity/NAMESPACE
+++ b/pkg/SobolSensitivity/NAMESPACE
@@ -6,6 +6,7 @@ import(stats)
 import(graphics)
 import(MASS)
 import(cubature)
+import(mvtnorm)
 
 # compute Sobol Indices using integrals under logit link
 export(LogitSImainsingle, LogitSImain, LogitSIsecpair, LogitSIsec)
