Fix bug in Rd file (shouldn't remove rstiefel dependencies).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sobolindices@30 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/SobolSensitivity/NAMESPACE
+++ b/pkg/SobolSensitivity/NAMESPACE
@@ -7,6 +7,7 @@ import(graphics)
 import(MASS)
 import(cubature)
 import(mvtnorm)
+import(rstiefel)
 
 # compute Sobol Indices using integrals under logit link
 export(LogitSImainsingle, LogitSImain, LogitSIsecpair, LogitSIsec)
