Remove some external export functions.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sobolindices@31 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/SobolSensitivity/NAMESPACE
+++ b/pkg/SobolSensitivity/NAMESPACE
@@ -10,19 +10,19 @@ import(mvtnorm)
 import(rstiefel)
 
 # compute Sobol Indices using integrals under logit link
-export(LogitSImainsingle, LogitSImain, LogitSIsecpair, LogitSIsec)
+# export(LogitSImainsingle, LogitSImain, LogitSIsecpair, LogitSIsec)
 
 # compute Sobol Indices using sampling under logit link
-export(LogitSImainsample, LogitSIfordersample, LogitSIsecpair, 
-     LogitSIsec, LogitSIkintersample, LogitSIkordersample)
+# export(LogitSImainsample, LogitSIfordersample, LogitSIsecpair, 
+#     LogitSIsec, LogitSIkintersample, LogitSIkordersample)
 
 # compute Sobol Indices using formula under identity link
-export(IdenSImainsingle, IdenSImain, IdenSIsecpair, 
-     IdenSIsec, IdenSIkinter, IdenSIkorder)
+# export(IdenSImainsingle, IdenSImain, IdenSIsecpair, 
+#     IdenSIsec, IdenSIkinter, IdenSIkorder)
 
 # compute Sobol Indices using formula under log link
-export(LogSImainsingle, LogSImain, LogSIsecpair, 
-     LogSIsec, LogSIkinter, LogSIkorder)
+# export(LogSImainsingle, LogSImain, LogSIsecpair, 
+#     LogSIsec, LogSIkinter, LogSIkorder)
 
 # compute Sobol Indices using Auer-Gervini method
 exportClasses("SobolIndices")
