Add total effect Sobol indices function.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sobolindices@42 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/SobolSensitivity/NAMESPACE
+++ b/pkg/SobolSensitivity/NAMESPACE
@@ -26,7 +26,8 @@ import(rstiefel)
 
 # compute Sobol Indices using Auer-Gervini method
 exportClasses("SobolIndices")
+exportClasses("SobolIndicesTotal")
 exportClasses("SobolIndicesAll")
-export(SobolIndices, SobolIndicesAll)
+export(SobolIndices, SobolIndicesTotal, SobolIndicesAll)
 
 
