Fix ydata type and namespace (import combn fromm ultis).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sobolindices@44 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/SobolSensitivity/NAMESPACE
+++ b/pkg/SobolSensitivity/NAMESPACE
@@ -8,6 +8,7 @@ import(MASS)
 import(cubature)
 import(mvtnorm)
 import(rstiefel)
+importFrom("utils", "combn")
 
 # compute Sobol Indices using integrals under logit link
 # export(LogitSImainsingle, LogitSImain, LogitSIsecpair, LogitSIsec)
