--- a/pkg/SobolSensitivity/NAMESPACE
+++ b/pkg/SobolSensitivity/NAMESPACE
@@ -6,6 +6,7 @@ import(stats)
 import(graphics)
 import(MASS)
 import(cubature)
+import(pracma)
 import(mvtnorm)
 import(rstiefel)
 importFrom("utils", "combn")
